Implemented G-keys features
